no trailing slash

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Initium Appraiser
 email: jeff.fredrickson@gmail.com
 description: >
   Evaluate the value of Initium items.
-baseurl: "/initium-appraiser/"
+baseurl: "/initium-appraiser"
 url: "http://jfredrickson.github.io/initium-appraiser/"
 
 # Build settings
